# SMVIT-project

./: requirements.txt
backend/: colors.py  main.py
mobile-app/: CMakeLists.txt  fileupload.cpp  fileupload.h  main.cpp  main.qml
